--- a/management/templates/all_member_report.html
+++ b/management/templates/all_member_report.html
@@ -7,8 +7,8 @@
     <div class="all-member-report-header-title-container-div">
         Total Members Report
     </div>
-    <div>
-        <a href="{% url 'all-members-report-pdf' %}">Download PDF</a>
+    <div class="all-member-report-download-pdf-container-div">
+        <a class="all-member-report-download-pdf" href="{% url 'all-members-report-pdf' %}">Download PDF</a>
     </div>
     <div class="all-member-report-total-member-table-container">
         <table class="all-member-report-table">
