--- a/management/templates/leaders_report.html
+++ b/management/templates/leaders_report.html
@@ -7,8 +7,8 @@
     <div class="leader-report-title-header-div">
         Leaders
     </div>
-    <div>
-        <a href="{% url 'leaders-report-pdf' %}">Download PDF</a>
+    <div class="leaders-report-download-pdf-container-div">
+        <a class="leaders-report-download-pdf" href="{% url 'leaders-report-pdf' %}">Download PDF</a>
     </div>
     <div class="leader-report-table-container-div">
         <table class="leader-report-table">
