--- a/management/templates/member_count_per_brgy.html
+++ b/management/templates/member_count_per_brgy.html
@@ -7,8 +7,8 @@
         <div class="member-count-per-brgy-title-header-div">
             Members per Barangay Report
         </div>
-        <div>
-            <a href="{% url 'member-count-brgy-pdf' %}">Download PDF</a>
+        <div class="member-count-per-brgy-download-pdf-container">
+            <a class="member-count-download-pdf" href="{% url 'member-count-brgy-pdf' %}">Download PDF</a>
         </div>
         <div class="member-count-per-brgy-table-container-div">
             <table class="member-count-per-brgy-table">
