--- a/management/templates/members_report.html
+++ b/management/templates/members_report.html
@@ -8,8 +8,8 @@
     <div class="members-report-title-header-div">
         Members
     </div>
-    <div>
-        <a href="{% url 'members-report-pdf' %}">Download PDF</a>
+    <div class="members-report-download-pdf-container">
+        <a class="members-report-download-pdf" href="{% url 'members-report-pdf' %}">Download PDF</a>
     </div>
     <div class="members-report-table-container-div">
         <table class="members-report-table">
