--- a/management/templates/no_member_brgy.html
+++ b/management/templates/no_member_brgy.html
@@ -7,8 +7,8 @@
         <div class="no-member-brgy-title-header-div">
             No Members Barangay Report
         </div>
-        <div>
-            <a href="{% url 'no-member-brgys-pdf' %}">Download PDF</a>
+        <div class="no-member-brgy-download-pdf-function-container">
+            <a class="no-member-brgy-download-pdf" href="{% url 'no-member-brgys-pdf' %}">Download PDF</a>
         </div>
         <div class="no-member-brgy-table-container-div">
             <table class="no-member-brgys-table">
