--- a/management/templates/no_member_leaders.html
+++ b/management/templates/no_member_leaders.html
@@ -7,8 +7,8 @@
         <div class="no-member-leaders-title-header-div">
             No Member Leaders Report
         </div>
-        <div>
-            <a href="{% url 'no-member-leader-pdf' %}">Download PDF</a>
+        <div class="no-member-leaders-download-pdf-container-div">
+            <a class="no-member-download-pdf" href="{% url 'no-member-leader-pdf' %}">Download PDF</a>
         </div>
         <div class="no-member-leaders-table-container-div">
             <table class="no-member-leaders-table">
