--- a/management/static/all-members-report.css
+++ b/management/static/all-members-report.css
@@ -13,7 +13,7 @@
 
 .all-member-report-total-member-table-container{
     margin: auto;
-    width: 50%;
+    width: 60%;
     margin-bottom: 50px;
 }
 
@@ -28,4 +28,22 @@
     background-color: rgb(220, 220, 220);
     color: rgb(20, 20, 20);
     padding: 15px;
+}
+
+.all-member-report-download-pdf-container-div{
+    text-align: center;
+    margin: 20px;
+}
+
+.all-member-report-download-pdf{
+    background-color: rgba(100, 150, 150, 0.8);
+    font-family: 'Montserrat';
+    color: beige;
+    text-decoration: none;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-radius: 10px;
+    border: solid 1px rgb(150, 200, 200);
 }
