--- a/management/static/dashboard.css
+++ b/management/static/dashboard.css
@@ -41,7 +41,7 @@
     vertical-align: top;
     display: inline-block;
     text-align: center;
-    background-color: rgb(10, 40, 40);
+    background-image: linear-gradient(180deg, rgb(10, 40, 40), rgb(25, 60, 60), rgb(40, 100, 100));
     color: beige;
     width: 150px;
     height: 150px;
@@ -62,3 +62,86 @@
 .dashboard-statistics-block-detail-div{
     margin-top: 20px;
 }
+
+
+
+#percentage-graph-div{
+    text-align: center;
+}
+
+.percentage-transaction-section{
+    float:right;
+    margin-right:10px;
+    width:33%;
+}
+
+.percentage-block{
+    display:inline;
+    width:10
+}
+
+
+.skill-display-div-loop{
+    display:inline;
+    text-align:center;
+    color:beige;
+}
+
+#skill-section-title{
+    font-family: Lato, 'Montserrat';
+    color:beige;
+    font-size:35px;
+    text-align:center;
+    letter-spacing: 3px;
+}
+
+.skill-box-div{
+    background-image: linear-gradient(180deg, rgb(10, 40, 40), rgb(25, 60, 60), rgb(40, 100, 100));
+    margin-top:-10px;
+    display:inline-block;
+    height:270px;
+    width:400px;
+    border-radius:10px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+                rgba(0, 0, 0, 0.12) 0px -12px 30px,
+                rgba(0, 0, 0, 0.12) 0px 4px 6px,
+                rgba(0, 0, 0, 0.17) 0px 12px 13px,
+                rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-bottom:30px;
+}
+
+.skill-name-div{
+    text-transform: uppercase;
+}
+
+.container {
+    text-align: center;
+    border-radius: 8px;
+    display: inline-block;
+    place-items: center;
+}
+
+.circular-progress-py {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.5);
+}
+.circular-progress-py:before {
+    content: "";
+    position: absolute;
+    height: 85%;
+    width: 85%;
+    background-image: linear-gradient(180deg, rgb(10, 40, 40), rgb(25, 60, 60), rgb(40, 100, 100));
+    border-radius: 50%;
+}
+.value-container-py {
+    position: relative;
+    font-family: "Montserrat";
+    font-size: 25px;
+    color: beige;
+}
+
