--- a/management/static/leaders-report.css
+++ b/management/static/leaders-report.css
@@ -26,3 +26,21 @@
     background-color: rgb(200, 200, 200);
     padding: 10px;
 }
+
+.leaders-report-download-pdf-container-div{
+    margin: 20px;
+    text-align: center;
+}
+
+.leaders-report-download-pdf{
+    background-color: rgba(100, 150, 150, 0.8);
+    font-family: 'Montserrat';
+    color: beige;
+    text-decoration: none;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-radius: 10px;
+    border: solid 1px rgb(150, 200, 200);
+}
