--- a/management/static/member-count-per-brgy.css
+++ b/management/static/member-count-per-brgy.css
@@ -37,3 +37,20 @@
     font-family: 'Montserrat';
     background-color: rgb(230, 230, 230);
 }
+
+.member-count-per-brgy-download-pdf-container{
+    text-align: center;
+}
+
+.member-count-download-pdf{
+    background-color: rgba(100, 150, 150, 0.8);
+    font-family: 'Montserrat';
+    color: beige;
+    text-decoration: none;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-radius: 10px;
+    border: solid 1px rgb(150, 200, 200);
+}
