--- a/management/static/no-member-brgy.css
+++ b/management/static/no-member-brgy.css
@@ -39,3 +39,20 @@
     margin-top: 40px;
     border-radius: 10px;
 }
+
+.no-member-brgy-download-pdf-function-container{
+    text-align: center;
+}
+
+.no-member-brgy-download-pdf{
+    background-color: rgba(100, 150, 150, 0.8);
+    font-family: 'Montserrat';
+    color: beige;
+    text-decoration: none;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-radius: 10px;
+    border: solid 1px rgb(150, 200, 200);
+}
