--- a/management/templates/all_member_report_pdf.html
+++ b/management/templates/all_member_report_pdf.html
@@ -6,6 +6,7 @@
     <style>
         .all-member-report-utmost-container-section{
             font-family: 'Montserrat';
+            font-size: 10px;
         }
 
         .all-member-report-header-title-container-div{
@@ -27,7 +28,6 @@
         }
 
         .all-member-report-table-head{
-            padding: 10px;
             border: 1px solid rgb(20, 20, 20);
             width: 400px;
         }
@@ -35,7 +35,6 @@
         .all-member-report-table-data{
             border: 1px solid rgb(20, 20, 20);
             color: rgb(20, 20, 20);
-            padding: 10px;
         }
     </style>
 </head>
