--- a/management/templates/leader_profile_non_admin.html
+++ b/management/templates/leader_profile_non_admin.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     {% load static %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'non-admin-leader-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'non-admin-leader-profile-responsive.css' %}">
     <script src="{% static 'jquery-3.6.4.min.js' %}"></script>
     <script src="{% static 'chart.js' %}"></script>
     <script src="{% static 'swiper-bundle.min.js' %}"></script>
@@ -15,27 +18,34 @@
     <section class="leader-profile-utmost-container-section">
         <div class="leader-profile-page-title-navbar">
             <span class="leader-profile-logout-span">
+                <span id="screen-width"></span>
                 <a class="home-link-to-page" href="{% url 'logout' %}">
                     <span class="home-link-icon-container">
                         <span class="home-link-icon-div">
                             <i class="fa fa-sign-out" aria-hidden="true"></i>
                         </span>
                     </span>
-                    <span class="home-link-icon-container">
-                        <span class="home-link-name">
-                            Logout
-                        </span>
-                    </span>
-                </a>
-                <a class="home-link-to-page" href="{% url 'profile-member' request.user %}">
-                    <span class="home-link-icon-container">
-                        <span class="home-link-name">
-                            {{ request.user }}
-                        </span>
-                    </span>
                 </a>
             </span>
-            <span>Leader Profile</span>
+            <span>
+                {% if authenticated_leader %}
+                    <a class="home-link-to-page" href="{% url 'profile-leader' request.user %}">
+                        <span class="home-link-icon-container">
+                            <span class="home-link-name">
+                                {{ request.user }}
+                            </span>
+                        </span>
+                    </a>
+                {% else %}
+                    <a class="home-link-to-page" href="{% url 'profile-member' request.user %}">
+                        <span class="home-link-icon-container">
+                            <span class="home-link-name">
+                                {{ request.user }}
+                            </span>
+                        </span>
+                    </a>
+                {% endif %}
+            </span>
             {% if request.user == leader.user %}
                 <span class="leader-profile-edit-detail-toggle-btn"><i class="fa fa-edit"></i></span>
             {% endif %}
