--- a/management/templates/member_filtered_per_brgy_report_pdf.html
+++ b/management/templates/member_filtered_per_brgy_report_pdf.html
@@ -6,6 +6,7 @@
     <style>
         .member-per-brgy-report-utmost-container-section{
             font-family: 'Montserrat';
+            font-size: 10px;
         }
 
         .member-per-brgy-report-title-header-div{
@@ -31,16 +32,13 @@
             width: 500px;
             background-color: rgb(40, 90, 90);
             color: beige;
-            padding: 15px;
         }
 
         .member-per-table-head{
-            padding: 12px;
             border: 1px solid rgb(20, 20, 20);
         }
 
         .member-per-table-data{
-            padding: 10px;
             border: 1px solid rgb(20, 20, 20);
         }
     </style>
@@ -54,7 +52,17 @@
             {% for brgy, members in member_filtered_per_brgy_list.items %}
                 <table class="member-per-brgy-table">
                     <tr class="member-per-brgy-table-row">
-                        <th class="member-per-brgy-table-head" colspan="2">{{ brgy }}</th>
+                        <th class="member-per-brgy-table-head" colspan="2">
+                            <span style="float: left;">
+                                {{ brgy }}
+                            </span>
+                            <span>
+                                Member Percentage: {{ members.1.1 }}%
+                            </span>
+                            <span style="float: right;">
+                                Voter Population:{{ members.1.2 }}
+                            </span>
+                        </th>
                     </tr>
                     <tr class="member-per-brgy-table-row">
                         <th class="member-per-table-head">Name</th>
@@ -62,11 +70,15 @@
                     </tr>
                     {% for member in members %}
                         <tr class="member-per-brgy-table-row">
-                            <td class="member-per-table-data">{{ member.name }}</td>
-                            <td class="member-per-table-data">{{ member.group }}</td>
+                            <td class="member-per-table-data">{{ forloop.counter }}. {{ member.0.name }}</td>
+                            <td class="member-per-table-data">{{ member.0.group }}</td>
                         </tr>
                     {% endfor %}
                 </table>
+            {% empty %}
+                <div class="member-per-table-">
+                    No Data for Barangay {{ the_brgy }}
+                </div>
             {% endfor %}
         </div>
     </section>
