--- a/management/templates/non_admin_member_profile.html
+++ b/management/templates/non_admin_member_profile.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     {% load static %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'non-admin-profile-member.css' %}">
     <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'non-admin-profile-member-responsive.css' %}">
     <script src="{% static 'jquery-3.6.4.min.js' %}"></script>
     <script src="{% static 'chart.js' %}"></script>
     <script src="{% static 'swiper-bundle.min.js' %}"></script>
@@ -21,21 +24,27 @@
                             <i class="fa fa-sign-out" aria-hidden="true"></i>
                         </span>
                     </span>
-                    <span class="member-profile-link-icon-container">
-                        <span class="member-profile-link-name">
-                            Logout
-                        </span>
-                    </span>
-                </a>
-                <a class="member-link-to-page" href="{% url 'profile-member' request.user %}">
-                    <span class="member-profile-link-icon-container">
-                        <span class="member-profile-link-name">
-                            {{ request.user }}
-                        </span>
-                    </span>
                 </a>
             </span>
-          Member Profile
+            <span>
+                {% if authenticated_member %}
+                    <a class="member-link-to-page" href="{% url 'profile-member' request.user %}">
+                        <span class="member-profile-link-icon-container">
+                            <span class="member-profile-link-name">
+                                {{ request.user }}
+                            </span>
+                        </span>
+                    </a>
+                {% else %}
+                    <a class="member-link-to-page" href="{% url 'profile-leader' request.user %}">
+                        <span class="member-profile-link-icon-container">
+                            <span class="member-profile-link-name">
+                                {{ request.user }}
+                            </span>
+                        </span>
+                    </a>
+                {% endif %}
+            </span>
           {% if request.user == member.user %}
             <span class="member-profile-edit-detail-toggle-btn"><i class="fa fa-edit"></i></span>
           {% endif %}
@@ -144,17 +153,6 @@
       </div>
       <div style="box-shadow: inset 0 5px 7px -3px rgba(0, 0, 0, 0.5); padding: 10px; margin-top: 200px;"></div>
         <!--      {{ member_leader }}-->
-      <div class="member-profile-left-block-container-div">
-          {% if request.user == member.user or request.user.is_superuser or request.user.username in member_leader %}
-              <div class="member-profile-qr-code-container-div">
-                  <div class="member-profile-member-qr-code-title-header">
-                      {{ member.name }} QR Code
-                  </div>
-                  <img class="member-profile-qr-code"
-                       src="{% static 'images/qr-codes/' %}QR-Code-{{ member.name }}-{{ member.brgy }}-{{ member.id }}.png">
-              </div>
-          {% endif %}
-      </div>
       <div class="member-profile-right-block-container-div">
           <div class="member-profile-member-affiliation-block-div">
               {% if not member.name in no_leader_member_list %}
@@ -238,6 +236,17 @@
                   </div>
               {% endif %}
           </div>
+      </div>
+      <div class="member-profile-left-block-container-div">
+          {% if request.user == member.user or request.user.is_superuser or request.user.username in member_leader %}
+              <div class="member-profile-qr-code-container-div">
+                  <div class="member-profile-member-qr-code-title-header">
+                      {{ member.name }} QR Code
+                  </div>
+                  <img class="member-profile-qr-code"
+                       src="{% static 'images/qr-codes/' %}QR-Code-{{ member.name }}-{{ member.brgy }}-{{ member.id }}.png">
+              </div>
+          {% endif %}
       </div>
 
   <!--    <div id="memberDetailsBlock">-->
